Added support for yaml source files when drawning CHADA/MODA tables
The functions in mochada_kit/tables have been modified so that
the source data can now additionally be read from yaml files.
Previously only json could be handled. The functions still
plot the data a plantuml json diagrams as it was unnecessary
to change this behaviour. yaml data are read into a Python
dict, at which point they become indistinguishable from
json data read in as a Python dict.

Some examples, demo data and templates have been updated/added
to reflect the support for yaml as well as json. The readme.md
has also been updated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ classifiers=[
 keywords = ["research", "data", "management", "visualization", "plantuml", "uml", "CHADA", "MODA"]
 requires-python = ">=3.6"
 dependencies = [
-    "h5py"
+    "h5py",
+    "pyyaml"
 ]
 dynamic = ["version"]
 
