--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,32 +5,78 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "mochada_kit"
 description = "Python code for generating MODA (MOdelling DAta) and CHADA (CHAracterisation DAta) workflow diagrams and tables using plantuml, with machine-readable, enhanced design based on bespoke themes."
-authors = [
-    {name = "Thomas G. Woodcock"},
-]
-maintainers = [{name = "Thomas G. Woodcock"},]
-license = {file = "LICENSE"}
+authors = [{ name = "Thomas G. Woodcock" }]
+maintainers = [{ name = "Thomas G. Woodcock" }]
+license = { file = "LICENSE" }
 
-classifiers=[
-    'Programming Language :: Python',
-    'Programming Language :: Python :: 3',
-    'Development Status :: 3 - Alpha',
-    'Environment :: X11 Applications :: Qt',
-    'Intended Audience :: End Users/Desktop',
-    'Intended Audience :: Science/Research',
-    'License :: OSI Approved :: MIT License',
-    'Operating System :: POSIX',
-    'Operating System :: Microsoft :: Windows',
-    'Topic :: Scientific/Engineering',
-    'Topic :: Scientific/Engineering :: Visualization',
+classifiers = [
+  'Programming Language :: Python',
+  'Programming Language :: Python :: 3',
+  'Development Status :: 3 - Alpha',
+  'Environment :: X11 Applications :: Qt',
+  'Intended Audience :: End Users/Desktop',
+  'Intended Audience :: Science/Research',
+  'License :: OSI Approved :: MIT License',
+  'Operating System :: POSIX',
+  'Operating System :: Microsoft :: Windows',
+  'Topic :: Scientific/Engineering',
+  'Topic :: Scientific/Engineering :: Visualization',
 ]
-keywords = ["research", "data", "management", "visualization", "plantuml", "uml", "CHADA", "MODA"]
+keywords = [
+  "research",
+  "data",
+  "management",
+  "visualization",
+  "plantuml",
+  "uml",
+  "CHADA",
+  "MODA",
+]
 requires-python = ">=3.6"
-dependencies = [
-    "h5py",
-    "pyyaml"
-]
+dependencies = ["h5py", "pyyaml"]
 dynamic = ["version"]
+
+[project.optional-dependencies]
+dev = ["pre-commit"]
+
+[tool.ruff]
+exclude = ["examples/python_scripts/*.py"]
+
+[tool.ruff.lint]
+ignore-init-module-imports = true # do not remove unused imports in __init__ and warn instead
+select = [
+  "B",   # flake8-bugbear
+  "E",   # pycodestyle
+  "F",   # Pyflakes
+  "I",   # isort
+  "SIM", # flake8-simplify
+  "UP",  # pyupgrade
+]
+ignore = [
+  # conflict with other rules
+  "D203", # one-blank-line-before-class (conflicts with D204)
+  "D212", # multi-line-summary-first-line (conflicts with D213)
+  # conflict with formatter
+  "D206", # indent-with-spaces
+  "D300", # triple-single-quotes
+  "E111", # indentation-with-invalid-multiple
+  "E114", # indentation-with-invalid-multiple-comment
+  "E117", # over-indented
+  # conflict with Python 3.6 compatibility
+  "UP022", # replace-stdout-stderr
+  # personal preference
+  "SIM108", # turnary operator instead of if else block
+]
+
+[tool.ruff.lint.isort]
+known-local-folder = ["src"]
+
+[tool.ruff.lint.per-file-ignores]
+"*.ipynb" = [
+  "B018", # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
+  "E501", # line too long
+  "F811", # 'redefined-while-unused'; many false positives in notebooks because ipywidgets decorated functions are not recognised
+]
 
 [project.readme]
 'file' = "README.md"
@@ -40,7 +86,7 @@ dynamic = ["version"]
 mochada_kit = "mochada_kit.__init__:main"
 
 [tool.setuptools.dynamic]
-version = {attr = "mochada_kit.__version__"}
+version = { attr = "mochada_kit.__version__" }
 
 [tool.setuptools.packages.find]
 where = ["src"]
