ci(docs): Add config step before building docs
In this way we can set up the required `.mochada_kit/config.json` file
(it will be empty).

--- a/.github/workflows/sphinx.yaml
+++ b/.github/workflows/sphinx.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Build HTML
         uses: ammaraskar/sphinx-action@8.1.3
         with:
-          pre-build-command: "apt-get update -y && apt-get install -y gcc libgl1 && pip install -e ."
+          pre-build-command: "apt-get update -y && apt-get install -y gcc libgl1 && pip install -e . && mochada_kit config"
           docs-folder: "docs/"
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
